--- a/Prova_A/E01_a.html
+++ b/Prova_A/E01_a.html
@@ -7,11 +7,13 @@
     */
 
     //ENTRADA
-
+    const gramasdiariamente = prompt("Quantas gramas o cão come diariamente?").replace(",", ".")
 
     //PROCESSAMENTO
-
+    const diasuteis = Number(gramasdiariamente * 5)
+    const finaisdesemana = Number(gramasdiariamente * 15 / 100) * 2
+    const resultado = Number(diasuteis) + Number(finaisdesemana)
 
     //SAÍDA
-
+    document.write(`O cão come semanalmente ${resultado.toFixed(1)} gramas de ração.`)
 </script>
