--- a/Prova_A/E02_a.html
+++ b/Prova_A/E02_a.html
@@ -6,11 +6,14 @@
     */
 
     //ENTRADA
-
+    const posto1 = prompt('Informe o preço do combustível no posto 1').replace(",", ".")
+    const posto2 = prompt('Informe o preço do combustível no posto 2').replace(",", ".")
+    const posto3 = prompt('Informe o preço do combustível no posto 3').replace(",", ".")
 
     //PROCESSAMENTO
-
+    const conta = Number(posto1) + Number(posto2) + Number(posto3)
+    const resultado = Number(conta) / 3
 
     //SAÍDA
-
+    document.write(`A média do preço do combustível é de R$ ${resultado.toFixed(2)}. `)
 </script>
