--- a/Prova_A/E05_desafio.html
+++ b/Prova_A/E05_desafio.html
@@ -16,5 +16,5 @@
     const revisão = Number(km/2000) * 200.00
 
     //SAÍDA
-    document.write(`A quantidade de litros de combustível consumida foi de ${totallitros.toFixed(1)} litros e o custo total em revisão da motocicleta foi de R$ ${revisão.toFixed(2)}`)
+    document.write(`A quantidade de litros de combustível consumida foi de ${totallitros.toFixed(1)} litros e o custo total em revisão da motocicleta foi de R$ ${revisão.toFixed(2)}.`)
 </script>
